--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "15.0.3",
-    "@angular/cdk": "15.0.2",
+    "@angular/animations": "^15.0.3",
+    "@angular/cdk": "^15.0.2",
     "@angular/common": "15.0.3",
     "@angular/compiler": "15.0.3",
     "@angular/core": "15.0.3",
     "@angular/forms": "15.0.3",
-    "@angular/material": "15.0.2",
+    "@angular/material": "^15.0.2",
     "@angular/material-luxon-adapter": "15.0.2",
     "@angular/platform-browser": "15.0.3",
     "@angular/platform-browser-dynamic": "15.0.3",
