--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash-es": "4.17.21",
     "luxon": "3.1.1",
     "ng-apexcharts": "1.7.4",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ngx-quill": "20.0.1",
     "perfect-scrollbar": "1.5.5",
     "quill": "1.3.7",
